--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stremio Simkl Addon</title>
+    <meta name="description" content="A simple Stremio addon to display your Simkl watch list." />
   </head>
   <body>
     <div id="root"></div>
