Better name and description

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stremio Simkl Addon</title>
-    <meta name="description" content="A simple Stremio addon to display your Simkl watch list." />
+    <title>Stremio Simkl Watchlists</title>
+    <meta name="description" content="Unofficial Stremio addon to display your Simkl Watchlists in Stremio" />
   </head>
   <body>
     <div id="root"></div>
